Bug Fix: Text was too low in dropdown menu

--- a/Application/webSite/css/style.css
+++ b/Application/webSite/css/style.css
@@ -289,7 +289,6 @@ body{
 	position: relative;
 	text-align: left;
 	margin-left: 10px;
-	transform: translateY(100px);
 }
 
 .patientInfoInner {
@@ -300,7 +299,6 @@ body{
 	min-width: 150px;
 	text-align: left;
 	padding-left: 10px;
-	transform: translateY(100px);
 }
 
 .patientInfoInnerMessage {
@@ -308,7 +306,6 @@ body{
 	position: relative;
 	text-align: left;
 	margin-left: 10px;
-	transform: translateY(100px);
 }
 
 
